fixed hero svg do not overflow

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@
   padding: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -51,7 +55,6 @@ header {
 
 .hero-svg1,
 #middle {
-  /* height: 100%; */
   position: absolute;
   bottom: 0;
   left: -20%;
@@ -132,14 +135,13 @@ header {
   text-align: center;
   max-width: 765px;
   color: var(--white);
-  /* background-color: red; */
   z-index: 1;
 }
 
 .intro-container h1 {
   font-family: var(--font-headline);
-  padding-bottom: 30px;
-  padding-top: 55px;
+  padding-bottom: 20px;
+  padding-top: 35px;
   font-size: 60px;
   text-transform: uppercase;
 }
@@ -498,13 +500,10 @@ header {
   .section-content-4 {
     margin: 0 20px;
   }
-}
 
   .section-content-4 p {
     font-size: 16px;
   }
-
-
 }
 
 @media screen and (max-width: 425px) {
@@ -544,14 +543,13 @@ header {
     margin-right: 20px;
   }
 
-  
-
   .section-1,
   .section-2,
   .section-3{
     flex-direction: column;
     padding: 30px 0;
   }
+
   .section-1 h2,
   .section-2 h2,
   .section-3 h2{
@@ -563,7 +561,6 @@ header {
   }
 
   .section-content {
-
     margin: 0 20px;
   }
 
